Fixed empty alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,6 +56,12 @@ body {
 
 .content {
   padding: 0 var(--unit-2);
+
+  &--empty {
+    min-height: 50vh;
+    display: grid;
+    place-items: center;
+  }
 }
 
 .container {
